student interface completed

--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -60,6 +60,15 @@
                     {{name}}
                   </div>
                 </div>
+
+                <div class="row">
+                    <div class="cell" data-title="Full Name">
+                      Your Identity Key
+                    </div>
+                    <div class="cell" data-title="Job Title">
+                      {{assetKey}}
+                    </div>
+                  </div>
   
               <div class="row">
                 <div class="cell" data-title="Full Name">
@@ -85,15 +94,6 @@
                 </div>
                 <div class="cell" data-title="Age">
                   {{email}}
-                </div>
-              </div>
-
-              <div class="row">
-                <div class="cell" data-title="Full Name">
-                  Your Public Key
-                </div>
-                <div class="cell" data-title="Job Title">
-                  {{studentKey}}
                 </div>
               </div>
 
